--- a/VAGRANT/UBUNTU-16-04/Vagrantfile
+++ b/VAGRANT/UBUNTU-16-04/Vagrantfile
@@ -3,6 +3,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-16.04"
   config.vm.box_version="201708.22.0"
   config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.network :forwarded_port, guest: 80, host: 4567
 end
 
 #Vagrant.configure("2") do |config|
