--- a/NETWORK/GNS3/configs/GW1_i1_startup-config.cfg
+++ b/NETWORK/GNS3/configs/GW1_i1_startup-config.cfg
@@ -47,12 +47,16 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 10.0.2.1 255.255.255.252
+ ip address 10.0.2.0 255.255.255.255
+!
+interface Tunnel0
+ ip address 10.2.2.1 255.255.255.252
+ tunnel source 100.0.0.1
+ tunnel destination 200.0.0.1
 !
 interface FastEthernet0/0
  description internet
  ip address 100.0.0.1 255.255.255.252
- shutdown
  duplex auto
  speed auto
 !
@@ -67,6 +71,10 @@ interface FastEthernet0/1.1
  ip address 10.0.0.1 255.255.255.0
 !
 ip forward-protocol nd
+ip route 0.0.0.0 0.0.0.0 200.0.0.1
+ip route 0.0.0.0 0.0.0.0 200.0.0.2
+ip route 0.0.0.0 0.0.0.0 100.0.0.2
+ip route 10.0.2.1 255.255.255.255 10.2.2.2
 !
 !
 no ip http server
