--- a/NETWORK/GNS3/configs/GW1_i1_startup-config.cfg
+++ b/NETWORK/GNS3/configs/GW1_i1_startup-config.cfg
@@ -43,6 +43,19 @@ ip admission max-nodata-conns 3
 ip tcp synwait-time 5
 ! 
 !
+crypto isakmp policy 1
+ encr aes
+ authentication pre-share
+crypto isakmp key P@ssw0rd address 200.0.0.1
+!
+!
+crypto ipsec transform-set AES128-SHA esp-aes esp-sha-hmac 
+!
+crypto map MAP1 10 ipsec-isakmp 
+ set peer 200.0.0.1
+ set transform-set AES128-SHA 
+ match address 101
+!
 !
 !
 !
@@ -59,6 +72,7 @@ interface FastEthernet0/0
  ip address 100.0.0.1 255.255.255.252
  duplex auto
  speed auto
+ crypto map MAP1
 !
 interface FastEthernet0/1
  no ip address
@@ -80,6 +94,7 @@ ip route 10.0.2.1 255.255.255.255 10.2.2.2
 no ip http server
 no ip http secure-server
 !
+access-list 101 permit ip host 10.0.2.1 host 10.0.2.2
 no cdp log mismatch duplex
 !
 !
