--- a/network/GNS3/configs/BGP/GW01_i4_startup-config.cfg
+++ b/network/GNS3/configs/BGP/GW01_i4_startup-config.cfg
@@ -1,27 +1,96 @@
 !
+
 !
+version 12.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
 hostname GW01
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+no aaa new-model
+memory-size iomem 5
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
+ip cef
+!
+!
+!
+!
+no ip domain lookup
+ip auth-proxy max-nodata-conns 3
+ip admission max-nodata-conns 3
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+interface FastEthernet0/0
+ description to prov1
+ ip address 101.0.0.2 255.255.255.252
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet0/1
+ description to prov2
+ ip address 102.0.0.2 255.255.255.252
+ shutdown
+ duplex auto
+ speed auto
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
 no cdp log mismatch duplex
+!
+!
+!
+control-plane
+!
+!
+!
+!
+!
+!
+!
+!
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+line vty 0 4
+ login
 !
 !
 end
