setup dhcp on fa1/0 on DC

--- a/network/GNS3/configs/BGP/DC_i3_startup-config.cfg
+++ b/network/GNS3/configs/BGP/DC_i3_startup-config.cfg
@@ -58,6 +58,11 @@ interface FastEthernet0/1
  duplex auto
  speed auto
 !
+interface FastEthernet1/0
+ ip address dhcp
+ duplex auto
+ speed auto
+!
 ip forward-protocol nd
 !
 !
