--- a/linux/scripts/test.yaml
+++ b/linux/scripts/test.yaml
@@ -15,7 +15,7 @@
     notify:
     - startservice
   handlers:
-  - name: srartservice
+  - name: startservice
     service:
         name: httpd
         state: restarted
