--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "/usr/local/bin/python3.6"
+    "python.pythonPath": "C:\\Users\\oleg.platonenko\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
